feat(score): add divs to display round status & game result

--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js" defer></script>
+    <script src="./ui-script.js" defer></script>
     <title>Rock Paper Scissors </title>
 </head>
+
 <body>
+    <div id="moves-menu">
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+    </div>
+
+    <br>
+
+    <div id="round-status">
+        <span>ROUND STATUS</span>
+        <br>
+        <div>Your score:
+            <span id="player-score"></span>
+        </div>
+
+        <div>AI's score:
+            <span id="computer-score"></span>
+        </div>
+
+        <div id="round-result"></div>
+    </div>
     
+    <br>
+    
+    <div id="game-result">gfdb</div>
 </body>
+
 </html>
