typo: chang computer's display name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <span id="player-score"></span>
         </div>
 
-        <div>AI's score:
+        <div>Computer's score:
             <span id="computer-score"></span>
         </div>
 
@@ -33,7 +33,7 @@
     
     <br>
     
-    <div id="game-result">gfdb</div>
+    <div id="game-result"></div>
 </body>
 
 </html>
