typo: add emojis

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div id="moves-menu">
-        <button id="rock">ROCK</button>
-        <button id="paper">PAPER</button>
-        <button id="scissors">SCISSORS</button>
+        <button id="rock">ROCK 🪨</button>
+        <button id="paper">PAPER 🧻</button>
+        <button id="scissors">SCISSORS ✂️</button>
     </div>
 
     <br>
@@ -29,7 +29,7 @@
             <span id="computer-move"></span>
         </div>
         <br>
-        
+
         <div>Your score:
             <span id="player-score"></span>
         </div>
